<resources>
    <string name="app_name">Owl</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="conctermo">Concordo com os termos de uso.    </string>
    <string name="menu_home">Inicio</string>
    <string name="menu_Perfil">Perfil</string>
    <string name="menu_settings">Configurações</string>
    <string name="menu_ajuda">Ajuda</string>
    <string name="menu_feedback">Encontrou algum problema?</string>
    <string name="ler">Ler</string>
    <string name="Citacoes">Citações</string>
    <string name="sobre">Sobre</string>
    <string name="compartilhe">Compartilhe</string>
    <string name="adicionar">Adicionar</string>
    <string name="livro">Livros</string>
    <string name="about">Olá, meu nome é Danielle e eu sou aluna do curso de Análise e Desenvolvimento de Sistemas da Fatec Ribeirão Preto.</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="esqueceu">Esqueceu sua senha?</string>
    <string name="criar">Não tem uma conta?</string>
    <string name="confsenha">Confirmar senha:</string>
    <string name="encontrar">O que deseja encontrar?</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="modonoturno">Deseja habilitar o modo noturno?</string>
    <string name="perfilv">Visualização de arquivos.       </string>
    <string name="mudarsenha">Mudar sua senha</string>
    <string name="notificacoes">Notificações</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
