<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_action_perfil"
            android:title="@string/menu_Perfil" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/menu_settings"/>
        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_action_about"
            android:title="@string/sobre"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_action_feedback"
                android:title="@string/menu_feedback" />
        </menu>
    </item>

</menu>
